fixed more layout issues
Former-commit-id: f1719d22183a1663337113f4eeefb0c7f191a27c [formerly d61a5c6e329bd8b32105dfb99e2071aa28272bd1] [formerly f1719d22183a1663337113f4eeefb0c7f191a27c [formerly d61a5c6e329bd8b32105dfb99e2071aa28272bd1] [formerly f1719d22183a1663337113f4eeefb0c7f191a27c [formerly d61a5c6e329bd8b32105dfb99e2071aa28272bd1] [formerly eb77f7ee815fe10fb818790a9f666fc2f2dba6cc [formerly 916738e00e93dfd6f1173d713d43af1b422e0adb]]]]
Former-commit-id: 8f0e7ad522dde5332662f124d3cbbdb7766c65d1 [formerly d46e9653056669924ef3fcee8c9756e5206eb148] [formerly 8f0e7ad522dde5332662f124d3cbbdb7766c65d1 [formerly d46e9653056669924ef3fcee8c9756e5206eb148] [formerly a8508b5023548bf1a2f875e1e4b39a111f2e5836 [formerly d6e5bc30a471b1463a116a7a0be1ac86a32ffea1]]] [formerly 943f22b2c021daf4d230c6842061a1a16db0e1a4 [formerly 17e545561cef2ff6d96d35108c269a7f8e505897] [formerly 943f22b2c021daf4d230c6842061a1a16db0e1a4 [formerly 17e545561cef2ff6d96d35108c269a7f8e505897] [formerly b33bacc3d3869ddba276bfab443374d8cfe239ba [formerly 6d37fdec03a7feb8a5442a4a7aaa2af1b5c11279]]]]
Former-commit-id: 943f22b2c021daf4d230c6842061a1a16db0e1a4 [formerly 17e545561cef2ff6d96d35108c269a7f8e505897]
Former-commit-id: 36602fa2e8af9d27ebfc2930dcd08ad729fdcbf2 [formerly b507e2ce07074c867ead7611aab6598c3230909b] [formerly f8c8fed60b265a7ce625218b1bcdad51de54bebb [formerly 278f4aefed9a910af1cc29e1ec93d1681fd10840]]
Former-commit-id: 7a8ddd3aa1bf385cf44d2e66a0e5b90b79e552e4 [formerly 0c88437a0b94fcedec6111942c42770a1dfdd448]
Former-commit-id: 2d1f3861ee3e53c88194a59437b0d9c25ec7512e

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -29,6 +29,10 @@ h1 {
     float: left;
 }
 
+.blockStyle {
+    display: block;
+}
+
 .alignJustify {
      align: justify;
  }
